# CPP_Projects

./: README.md
Assignment_1/: CMakeLists.txt  Readme.md
Assignment_1/receiver/include/: receiver.h
Assignment_1/receiver/src/: receiver.cpp
Assignment_1/receiver/tests/: test_receiver.cpp
Assignment_1/sender/include/: sender.h
Assignment_1/sender/src/: sender.cpp
Assignment_1/sender/tests/: test_sender.cpp
File Processing System/: CMakeLists.txt
File Processing System/common/include/: config.h
File Processing System/common/src/: config.cpp  logger.cpp
File Processing System/config/: values.config
File Processing System/receiver/include/: receiver.h
File Processing System/receiver/src/: receiver.cpp
File Processing System/receiver/tests/: main  main.cpp  test_receiver.cpp
File Processing System/sender/include/: sender.h
File Processing System/sender/src/: sender.cpp
File Processing System/sender/tests/: test_sender.cpp
